<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WaterGuard</string>
    
    <!-- Login & Registration -->
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome_desc">Afraid of dirty water? Don\'t worry, we\'re here!</string>
    <string name="login_desc">Please login with your registered account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_signup">Welcome to WaterGuard!</string>
    <string name="signup_desc">Create your account to get started</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    
    <!-- Home -->
    <string name="welcome_home">Welcome to WaterGuard</string>
    <string name="home_desc">Your water quality companion</string>
    <string name="home">Home</string>
    <string name="video_education">Video Education</string>
    <string name="water_testing">Education Water Testing</string>
    <string name="ph_testing">pH Testing</string>
    <string name="information_region">Area Information</string>
    <string name="community">Community</string>
    <string name="information">Information</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="save_changes">Save Changes</string>
    <string name="settings">Settings</string>
    <string name="chatbot">Customer Services</string>
    <string name="logout">Logout</string>
    <string name="detail_explanation">Detail Explanation</string>
    
    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="language">Language</string>
    <string name="use_indonesian">Use Bahasa Indonesia</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable Notifications</string>
    
    <!-- Water Testing -->
    <string name="water_test_title">Water Testing</string>
    <string name="test_instructions">Follow these steps to test your water quality</string>
    <string name="start_test">Start Test</string>
    <string name="view_results">View Results</string>
    
    <!-- pH Testing -->
    <string name="ph_test_title">pH Testing</string>
    <string name="ph_instructions">Follow these steps to test water pH level</string>
    <string name="ph_value">pH Value</string>
    <string name="ph_status">Water Status</string>
    
    <!-- Video Education -->
    <string name="video_title">Educational Videos</string>
    <string name="video_desc">Learn about water quality and testing</string>
    
    <!-- Chat Assistant -->
    <string name="chat_title">Chat Assistant</string>
    <string name="chat_desc">Ask me anything about water quality</string>
    <string name="type_message">Type your message…</string>
    <string name="send">Send</string>
    
    <!-- General -->
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading…</string>
    <string name="text_notification">Notification</string>
    <string name="text_lanjut_ke_artikel">Go to Article</string>
    <string name="text_video_upload">Video Upload</string>
    <string name="text_upload_video">Upload Video</string>
    <string name="text_send">Send</string>
    <string name="text_option_one_video">Is the water safe to be used?</string>
    <string name="text_water_safe">Water is safe</string>
    <string name="text_water_needs_to_be_filtered">Water needs to be filtered</string>
    <string name="text_water_is_not_safe">Water is not safe</string>
    <string name="text_add_comment">Add Comment?</string>
    <string name="text_select_video">Select Video</string>
</resources>