<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgrond"
    android:gravity="center_horizontal"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/apps"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_video_upload"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@color/white" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/profile"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_thumbnail"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:tint="@color/black"
                    android:src="@drawable/ic_add_photo" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="#FDF6F6"
                android:textColor="@color/black"
                android:text="@string/text_upload_video"
                android:layout_marginHorizontal="48dp" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:visibility="gone"
                android:backgroundTint="#FDF6F6"
                android:textColor="@color/black"
                android:text="@string/text_send"
                android:layout_marginHorizontal="48dp" />

            <LinearLayout
                android:id="@+id/ll_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_option_one_video" />

                <RadioGroup
                    android:id="@+id/rg_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rb_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/text_water_safe"/>

                    <RadioButton
                        android:id="@+id/rb_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/text_water_needs_to_be_filtered"/>

                    <RadioButton
                        android:id="@+id/rb_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/text_water_is_not_safe"/>

                </RadioGroup>

                <TextView
                    android:id="@+id/tv_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/text_option_one_video" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:visibility="gone"
                android:minLines="2"
                android:maxLines="4"
                android:gravity="top|start"
                android:inputType="textMultiLine|textCapSentences"
                android:imeOptions="actionDone"
                android:background="@drawable/background_edittext"
                android:hint="@string/text_add_comment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>