<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_margin="16dp"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WATERGUARD"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/iv_logo"
        app:layout_constraintStart_toEndOf="@id/iv_logo"
        app:layout_constraintBottom_toTopOf="@id/tv_subtitle"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_desc"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="10sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/iv_logo"
        app:layout_constraintBottom_toBottomOf="@id/iv_logo"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_arrow_back"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:hint="@string/name"
        android:background="@drawable/background_edittext"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:hint="@string/email"
        android:background="@drawable/background_edittext"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/background_edittext"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:background="@drawable/background_edittext"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>