<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgrond"
    android:gravity="center_horizontal"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/apps"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@color/white" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/profile"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/video_one" />

            <TextView
                android:id="@+id/btn_video_edukasi"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textStyle="bold"
                android:paddingVertical="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/video_education" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/home_three" />

            <TextView
                android:id="@+id/btn_pengujian"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textStyle="bold"
                android:paddingVertical="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/water_testing" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/btn_informasi_wilayah"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textStyle="bold"
                android:paddingVertical="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/information_region" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="16dp"
                android:src="@drawable/community"
                app:layout_constraintTop_toTopOf="@id/iv_logo"
                app:layout_constraintBottom_toBottomOf="@id/iv_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/btn_community"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textStyle="bold"
                android:paddingVertical="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/community" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>